# Mandate

./: .gitignore  AUTHORS  CMakeLists.txt  COPYRIGHTS  Doxyfile.in  README  linecounter.sh  methodstats.sh  pkg-win32.sh  projectConfig.h.in
source/: CMakeLists.txt  Doxyfile  gae.sln  projectConfig.h  resources.rc
source/blendnorm/: CMakeLists.txt  blendnorm.cpp
source/configurator/: CMakeLists.txt  configuration.cpp  configuration.h  main.cpp  main.h
source/g3d_viewer/: CMakeLists.txt  default_tex.h  dialogs.cpp  dialogs.h  g3d_viewer.vcproj  gae_g3dviewer.desktop  gae_g3dviewer.xpm  main.cpp  main.h  renderer.cpp  renderer.h  resources.rc
source/game/: CMakeLists.txt  Doxyfile  config.db  forward_decs.h  game.vcproj  glestadv.desktop  misc_widgets.cpp  misc_widgets.h  mkconfig.sh  mkinidoc.sh  pch.h  player_slot_widget.cpp  player_slot_widget.h  test_pane.cpp  test_pane.h  version.bat  version.sh
source/game/Rocket/: RocketControls.lib  RocketControls_d.lib  RocketCore_d.lib  RocketDebugger.lib  RocketDebugger_d.lib  _rocketcontrols.pyd  _rocketcontrols_d.pyd  _rocketcore.pyd  _rocketcore_d.pyd
source/game/ai/: ai.cpp  ai.h  ai_interface.cpp  ai_interface.h  ai_rule.cpp  ai_rule.h  gaia.cpp  gaia.h
source/game/ai_mandate/: mandate_ai.cpp  mandate_ai.h  mandate_ai_enums.h  mandate_ai_map.cpp  mandate_ai_map.h  mandate_ai_military.cpp  mandate_ai_military.h  mandate_ai_personalities.cpp  mandate_ai_personalities.h  mandate_ai_search_sim.cpp  mandate_ai_search_sim.h  mandate_ai_sim.cpp  mandate_ai_sim.h
source/game/characters/: character.cpp  character.h  crafting.cpp  crafting.h  hero.cpp  hero.h  specialization.cpp  specialization.h  traits.cpp  traits.h
source/game/creatable_types/: abilities.cpp  abilities.h  actions.cpp  actions.h  creatable_type.cpp  creatable_type.h  effect_type.cpp  effect_type.h  element_type.cpp  element_type.h  hero.cpp  item_type.cpp  item_type.h  modifications.cpp  modifications.h  producibles.cpp  producibles.h  resource_type.cpp  resource_type.h  statistics.cpp  statistics.h  traits.cpp  traits.h  unit_stats_base.cpp  unit_stats_base.h  unit_type.cpp  unit_type.h
source/game/entities/: command.cpp  command.h  effect.cpp  effect.h  entities_enums.h  event.cpp  event.h  faction.cpp  faction.h  game_particle.cpp  game_particle.h  item.cpp  item.h  object.cpp  object.h  resource.cpp  resource.h  unit.cpp  unit.h  unit_reference.cpp  unit_reference.h  upgrade.cpp  upgrade.h
source/game/events/: events.cpp  events.h
source/game/facilities/: auto_test.cpp  auto_test.h  components.cpp  components.h  debug_stats.cpp  debug_stats.h  game_util.cpp  game_util.h  logger.cpp  logger.h  pos_iterator.cpp  pos_iterator.h
source/game/game/: character_creator.cpp  character_creator.h  chat_manager.cpp  chat_manager.h  commander.cpp  commander.h  console.cpp  console.h  game.cpp  game.h  game_camera.cpp  game_camera.h  game_constants.cpp  game_constants.h  game_settings.cpp  game_settings.h  options.cpp  options.h  script_manager.cpp  script_manager.h  sim_interface.cpp  sim_interface.h  stats.cpp  stats.h
source/game/global/: config.cpp  config.cpp.template  config.h  config.h.template  core_data.cpp  core_data.h  exceptions.cpp  exceptions.h  lang.cpp  lang.h  metrics.cpp  metrics.h
source/game/graphics/: components.cpp  components.h  debug_renderer.cpp  debug_renderer.h  game_particle.cpp  game_particle.h  imageset.cpp  imageset.h  particle_type.cpp  particle_type.h  renderer.cpp  renderer.h  scene_culler.cpp  scene_culler.h  shader.cpp  shader.h  surface_atlas.cpp  surface_atlas.h  terrain_renderer.cpp  terrain_renderer.h  water_effects.cpp  water_effects.h
source/game/gui/: chat_dialog.cpp  chat_dialog.h  compound_widgets.cpp  compound_widgets.h  debug_widgets.cpp  debug_widgets.h  display.cpp  display.h  faction_display.cpp  faction_display.h  game_menu.cpp  game_menu.h  gui.cpp  gui.h  keymap.cpp  keymap.h  keymap_widget.cpp  keymap_widget.h  lua_console.cpp  lua_console.h  resource_bar.cpp  resource_bar.h  selection.cpp  selection.h  user_interface.cpp  user_interface.h  widget_window.cpp  widget_window.h  widgets.cpp  widgets.h  widgets_base.cpp  widgets_base.h
source/game/gui_mandate/: carried_display.cpp  carried_display.h  event_display.cpp  event_display.h  faction_command.cpp  faction_command.h  faction_display.cpp  faction_display.h  item_display.cpp  item_display.h  map_command.cpp  map_command.h  map_display.cpp  map_display.h  production_display - Copy.h  production_display.cpp  production_display.h  resources_display.cpp  resources_display.h  stats_display.cpp  stats_display.h  trade_bar.cpp  trade_bar.h  trade_command.cpp  trade_command.h
source/game/hierarchy/: century.cpp  century.h  cmd_types_hierarchy.cpp  cmd_types_hierarchy.h  cohort.cpp  cohort.h  formations.cpp  formations.h  host.cpp  host.h  legion.cpp  legion.h  settlement.cpp  settlement.h  squad.cpp  squad.h
source/game/html_interface/: render_interface.cpp  render_interface.h  system_interface.cpp  system_interface.h
source/game/main/: CmdArgs.cpp  CmdArgs.h  battle_end.cpp  battle_end.h  intro.cpp  intro.h  main.cpp  main.h  program.cpp  program.h
source/game/mandate_search/: annotated_map.cpp  annotated_map.h  cartographer.cpp  cartographer.h  cluster_map.h  influence_map.cpp  influence_map.h  node_map.h  node_pool.h  search_engine.h  (+4 more)
source/glest_game/: config.db  game.vcproj  mkconfig.sh  pch.cpp  pch.h
source/glest_map_editor/: main.cpp  main.cpp.orig  main.h  map.cpp  map.cpp.orig  map.h  program.cpp  program.h  renderer.cpp  renderer.h
source/glexemel/: CMakeLists.txt  g3d_support.py  xml2g.c
source/map_editor/: CMakeLists.txt  gae_mapeditor.desktop  gae_mapeditor.xpm  icons.h  main.cpp  main.cpp.orig  main.h  map.cpp  map.h  map_editor.vcproj  map_maker.cpp  map_maker.h  program.cpp  program.h  renderer.cpp  renderer.h  resources.rc
source/shared_lib/: CMakeLists.txt  libglest.vcproj
source/test/: CMakeLists.txt  main.cpp  pch.h  test.vcproj  test2.vcproj  test2_main.cpp  test_suite_template.cpp  test_suite_template.h
(+1626 files in other folders)
